fix: stye: modify nav width on mobile

--- a/src/styles/navBar.scss
+++ b/src/styles/navBar.scss
@@ -59,19 +59,24 @@
 }
 
 @media (max-width: "790px") {
+ 
+
   .nav-bar-container {
     background-color: white;
     padding: 10px;
     width: 100%;
+    justify-content: space-between;
     box-sizing: border-box;
-    left: 0;
+    left: 0; 
   }
 
   .mobile-menu {
     font-weight: 900;
     color: black;
     font-size: 25px;
-    display: contents;
+    display: flex;
+    justify-content: flex-end; 
+    width: 50%;
   }
 
   .buttons-section {
